[package]
name = "csv2json-lite"
version = "0.1.0"
description = "A little tool to convert a csv to a valid json array of object"
license = "MIT"
repository = "https://github.com/Kerollmops/csv2json"
readme = "README.md"
authors = ["Clément Renault <clement@meilisearch.com>"]
edition = "2018"

[dependencies]
csv = "1.1.1"
json = "0.12.0"
